# RwsInterface

./: LICENSE  README.md  assimp_log.txt  rwsettings.xml
Controller/: CMakeLists.txt
Controller/src/: RwsInterface.cpp  RwsInterface.h  SamplePlugin.cpp  SamplePlugin.hpp  controller.cpp  controllerx.cpp  controllery.cpp
EX1_PICK_AND_PASTE/: CMakeLists.txt
EX1_PICK_AND_PASTE/src/: example_pick_and_paste.cpp
EX1_PICK_AND_PASTE/src/Project_WorkCell/UR5/UR-6-85-5-A/: Device.wc.xml
EX1_PICK_AND_PASTE/src/Project_WorkCell/parts/: material.mtl
EX2_REACHABILITY_ANALYSIS/: CMakeLists.txt
EX2_REACHABILITY_ANALYSIS/data/: reachability_analysis.ipynb
EX2_REACHABILITY_ANALYSIS/data/.ipynb_checkpoints/: reachability_analysis-checkpoint.ipynb
EX2_REACHABILITY_ANALYSIS/src/: example_reachability_analysis.cpp
EX2_REACHABILITY_ANALYSIS/src/Project_WorkCell/: Scene.wc.xml
EX3_RRT_MOTION_PLANNING/: CMakeLists.txt
EX3_RRT_MOTION_PLANNING/src/: example_rrt_motion_planning.cpp
EX3_RRT_MOTION_PLANNING/src/Project_WorkCell/: Scene.wc.xml
EX3_RRT_MOTION_PLANNING/src/Project_WorkCell/parts/: bottle.ac
EX4_SPARSE_STEREO/: CMakeLists.txt
EX4_SPARSE_STEREO/src/: example_sparse_stereo.cpp
EX4_SPARSE_STEREO/src/Project_WorkCell/: Scene.wc.xml
EX5_LINEAR_INTERPOLATION/: CMakeLists.txt
EX5_LINEAR_INTERPOLATION/src/: example_linear_interpolation.cpp
EX5_LINEAR_INTERPOLATION/src/Project_WorkCell/: Scene.wc.xml
EX5_LINEAR_INTERPOLATION/src/Project_WorkCell/table/: Sigmund_table.mtl
EX6_PARABOLIC_BLEND/: CMakeLists.txt
EX6_PARABOLIC_BLEND/src/: example_linear_interpolation.cpp  example_parabolic_blend.cpp
EX6_PARABOLIC_BLEND/src/Project_WorkCell/: Scene.wc.xml
EX6_PARABOLIC_BLEND/src/Project_WorkCell/UR5/UR-6-85-5-A/: Device.wc.xml
EX7_DENSE_STEREO/: CMakeLists.txt
EX7_DENSE_STEREO/src/: example_dense_stereo.cpp
EX7_DENSE_STEREO/src/Project_WorkCell/: Scene.wc (copy).xml  Scene.wc.xml
EX9_WORKSPACE_ANALYSIS/: CMakeLists.txt
EX9_WORKSPACE_ANALYSIS/src/: example_workspace_analysis.cpp
EX9_WORKSPACE_ANALYSIS/src/Project_WorkCell/: Scene.wc.xml
Project_WorkCell/: Scene.wc.xml
RoviSamplePlugin/: CMakeLists.txt  plugin-full-sample.py
RoviSamplePlugin/src/: SamplePlugin.hpp
RwsInterface/: RwsInterface.cpp  RwsInterface.h  python_output.csv  sparseStereo.py
RwsInterface/feature_ext_models/CARN/: __init__.py  carn.py
RwsInterface/feature_ext_models/CARN/model/: ops.py
RwsInterface/stereo/: python_output.csv  sparseStereo.py
data/: reachability_analysis.ipynb  rrt.csv  rrt_analysis.ipynb  rrt_rrtbasic.csv  sparse_blur_analysis.ipynb
data/.ipynb_checkpoints/: reachability_analysis-checkpoint.ipynb  rrt_analysis-checkpoint.ipynb  sparse_blur_analysis-checkpoint.ipynb
data/sparse_analysis_blur/: sparse_analysis_RGB_blur0.csv  sparse_analysis_RGB_blur10.csv  sparse_analysis_RGB_blur100.csv  sparse_analysis_RGB_blur20.csv  sparse_analysis_RGB_blur50.csv  sparse_analysis_carn_blur0.csv  sparse_analysis_carn_blur10.csv  sparse_analysis_carn_blur100.csv  sparse_analysis_carn_blur20.csv  sparse_analysis_carn_blur50.csv  sparse_analysis_noise.csv  sparse_analysis_noise2.csv  sparse_analysis_noise3.csv  sparse_analysis_noise4.csv  sparse_analysis_rgb_height_150.csv
pose_pcd_obtainer/: CMakeLists.txt
pose_pcd_obtainer/src/: 3DScanner.cpp  ppl
pose_pcd_obtainer/src/Project_WorkCell/: Scene.wc.xml
